Add known/unknown key search options

--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -123,6 +123,8 @@
                     <!--<kbd>communitynames</kbd> for files with community filenames<br>-->
                     <kbd>encrypted</kbd> for encrypted files<br>
                     <kbd>encrypted:KEY</kbd> for encrypted by key<br>
+                    <kbd>knownkey</kbd> for files encrypted with known keys<br>
+                    <kbd>unknownkey</kbd> for files encrypted with unknown keys<br>
                     <!--<kbd>skit:soundkitid</kbd> for searching by SoundKitID<br>-->
                     <kbd>range:start-end</kbd> search within a specific set of FileDataIDs<br>
                     <!--<kbd>vo:searchterm</kbd> show sound files in which this dialogue appears<br>-->
