Add Datamine to supported addon list

--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -96,7 +96,7 @@
                                 <tr><td>SoundKits</td><td>Name sound files based on various sources.</td></tr>
                                 <tr><td>Spell textures</td><td>Very specific spell textures (chain effects and blendsets).</td></tr>
                                 <tr><td>Terrain Cube Maps</td><td>Cube maps used for reflections of terrain.</td></tr>
-                                <tr><td>Voice dialog (NPC)</td><td>Requires a data recording addon. Currently supported: WoWDB Profiler, Wowhead Looter.</td></tr>
+                                <tr><td>Voice dialog (NPC)</td><td>Requires a data recording addon with recorded in-game data. Currently supported: <a href="https://www.curseforge.com/wow/addons/datamine" target="_blank">Datamine</a>, WoWDB Profiler, Wowhead Looter.</td></tr>
                                 <tr><td>WMO models</td><td>Generates automatic (largely placeholder) names for WMO models. <br /><b style="color: red">Note:</b> Will take several minutes!</td></td></tr>
                                 <tr><td>WWF files</td><td>Weather particulate files used to show various environmental particle effects.</td></tr>
                             </tbody>
