Misc naming updates

--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -95,7 +95,7 @@
                                 <tr><td>Music (zones)</td><td>Zone music referenced from ZoneMusic.db2 and ZoneIntroMusicTable.db2.</td></tr>
                                 <tr><td>SoundKits</td><td>Name sound files based on various sources.</td></tr>
                                 <tr><td>Spell textures</td><td>Very specific spell textures (chain effects and blendsets).</td></tr>
-                                <tr><td>Terrain Cube Maps</td><td>Cube maps used for reflections of terrain.</td></tr>
+                                <tr><td>Terrain Cube Maps</td><td>Cube maps used for reflections of terrain, also names liquid textures.</td></tr>
                                 <tr><td>Voice dialog (NPC)</td><td>Requires a data recording addon with recorded in-game data. Currently supported: <a href="https://www.curseforge.com/wow/addons/datamine" target="_blank">Datamine</a>, WoWDB Profiler, Wowhead Looter.</td></tr>
                                 <tr><td>WMO models</td><td>Generates automatic (largely placeholder) names for WMO models. <br /><b style="color: red">Note:</b> Will take several minutes!</td></td></tr>
                                 <tr><td>WWF files</td><td>Weather particulate files used to show various environmental particle effects.</td></tr>
@@ -129,7 +129,7 @@
                                 <option value="Music" selected>Zone music</option>
                                 <option value="SoundKits" selected>SoundKits</option>
                                 <option value="SpellTex" selected>Spell textures</option>
-                                <option value="TerrainCubeMaps" selected>Terrain Cube Maps</option>
+                                <option value="TerrainCubeMaps" selected>Terrain Cube Maps and liquids</option>
                                 <option value="VO" selected>NPC dialog (requires data profiler addon)</option>
                                 <option value="WMO" selected>WMO models</option>
                                 <option value="WWF" selected>WWF files</option>
