--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -65,7 +65,7 @@
                 <a class="nav-link" id="lookup-tab" data-toggle="tab" href="#lookup" role="tab" aria-controls="lookup" aria-selected="false">Filename checks</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" id="m2-tab" data-toggle="tab" href="#m2" role="tab" aria-controls="m2" aria-selected="true">Manual models (M2)</a>
+                <a class="nav-link active" id="manual-tab" data-toggle="tab" href="#manual" role="tab" aria-controls="m2" aria-selected="true">Manual models</a>
             </li>
         </ul>
         <div class="tab-content">
@@ -147,7 +147,7 @@
                 <br />
                 <a id="checkFilesButton" style="cursor: pointer" class="btn btn-primary" onclick="checkFiles()">Check files</a>
             </div>
-            <div class="tab-pane fade show active" id="m2" role="tabpanel" aria-labelledby="m2-tab">
+            <div class="tab-pane fade show active" id="manual" role="tabpanel" aria-labelledby="manual-tab">
                 <div class="row">
                     <div class="col-md-4">
                         <div id="modelList">
@@ -240,7 +240,7 @@
 
         (function () {
             var page = 0;
-            var searchString = "type:m2,isplaceholder";
+            var searchString = "type:model,isplaceholder";
             var sortCol = 0;
             var sortDesc = "asc";
 
@@ -350,12 +350,17 @@
                     success: function (data) {
                         var filenameInput = document.getElementById("filename");
                         filenameInput.value = name;
-                      
+
                         var modelInfo = document.getElementById("modelInfo");
                         modelInfo.innerHTML = data;
 
                         var modelPreview = document.getElementById("modelPreview");
-                        modelPreview.innerHTML = "<iframe src='/mv/?filedataid=" + id + "&embed=true' style='width: 100%; height: 500px; border: none;'></iframe>";
+
+                        if (name.endsWith(".m2")) {
+                            modelPreview.innerHTML = "<iframe src='/mv/?filedataid=" + id + "&embed=true' style='width: 100%; height: 500px; border: none;'></iframe>";
+                        } else if(name.endsWith(".wmo")) {
+                            modelPreview.innerHTML = "<iframe src='/mv/?filedataid=" + id + "&type=wmo&embed=true' style='width: 100%; height: 500px; border: none;'></iframe>";
+                        }
                     }
                 });
             }
