More naming presets

--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -203,6 +203,9 @@
                 <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Earthen/11EA_Earthen_')">11 Earthen</button> <br />
                 <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Arathor/11AT_Arathor_')">11 Arathi</button> <br />
                 <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Nerubian/11NRB_Nerubian_')">11 Nerubian</button> <br />
+                <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Rootlands/11RTL_Rootlands_')">11 Harronir (RTL)</button> <br />
+                <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Kobold/11KB_Kobold_')">11 Kobold</button> <br />
+                <button class="btn btn-primary" onclick="setPrefix('World/Expansion10/Doodads/Kobyss/11KO_Kobyss_')">11 Kobyss</button> <br />
             </div>
         </div>
     </div>
