--- a/wwwroot/header.html
+++ b/wwwroot/header.html
@@ -40,6 +40,7 @@
                 <a class="dropdown-item" href="/files/keyinfo.html"><i class="fa fa-key" aria-hidden="true"></i> TACT Keys</a>
                 <a class="dropdown-item" href="/dbc/scenescript.html"><i class="fa fa-forward" aria-hidden="true"></i> Scenescripts</a>
                 <a class="dropdown-item" href="/db/creatures.html"><i class="fa fa-users" aria-hidden="true"></i> Creatures</a>
+                <a class="dropdown-item" href="/db/broadcasttext.html"><i class="fa fa-microphone" aria-hidden="true"></i> Voice-over lines</a>
             </div>
         </li>
     </ul>
